--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
           cd build
           ./make_android_lua54.sh
           ./make_android_lua53.sh
-          sudo apt install gcc-multilib
+          sudo apt install gcc-multilib libncurses5 -y
           ./make_android_luajit_arm64.sh
       - name: Upload
         uses: actions/upload-artifact@v2
@@ -120,7 +120,7 @@ jobs:
           path: ./build/plugin_luajit/**/*
           name: plugin_luajit  
   windows:
-    runs-on: windows-latest
+    runs-on: windows-2019
 
     steps:
       - uses: actions/checkout@v2
@@ -158,7 +158,7 @@ jobs:
           name: plugin_luajit
           
   windows-luajit-32:
-    runs-on: windows-latest
+    runs-on: windows-2019
 
     steps:
       - uses: actions/checkout@v2
